src/scss/main.scss
/* Google Css */
/* By Dylan Araps */

/*  Reset */
body,
div,
html,
input,
ul {
	border: none;
	margin: 0;
	padding: 0;
}

body {
	background: #FFFFFF;
	font-family: arial;
	font-size: .8em;
	overflow: hidden;
}

.site {
	display: flex;
	flex-direction: column;
	min-height: 100vh;
}

.site-content {
	align-items: center;
	display: flex;
	flex: 1;
	justify-content: center;
}

.vertical-center {
	margin-bottom: 30vh;
	width: 100vh;
}

.logo {
	display: block;
	height: auto;
	margin:0 auto 10px auto;
	width: 300px;
}

.search {
	border-color: #DDDDDD;
	border: 1px solid;;
	display: block;
	height: 26px;
	margin: 0 auto 15px auto;
	max-width: 400px;
	padding: 0 5px 0 5px;
	transition: .2s;
	width: 90vw;

	&:focus,
	&:hover	{
		border-color: #4683EA;
	}
}

.btn-wrap {
	text-align: center;
}

.btn {
	background: #FFFFFF;
	border-radius: 2px;
	border: 1px solid #DDDDDD;
	display: inline-block;
	line-height: 26px;
	margin: 0 auto;
	text-align: center;
	transition: .2s;

	&:hover,
	&:focus	{
		border-color: #AAAAAA;
		cursor: pointer;
	}
}

nav {
	height: 50px;
}

footer {
	height: 5.5vh;

	li {
		line-height: 5.5vh;
	}
}

a {
	color: #666666;
	font-weight: normal;
	text-decoration: none;

	&:hover {
		border-bottom: 1px solid;
		color: #666666;
	}
}

ul {
	display: inline; /*  Needed for the footer */
	list-style: none;
	margin-right: 30px;
}

.right {
	float: right;
}

li {
	display: inline;
	line-height: 50px; /*  Set to same height as container for vertical centering */
	margin-left: 20px;
}

@media only screen and (max-width: 30em) {
	footer {
		height: 10vh;

		ul {
			display: block;
			text-align: center;
		}

		li {
			line-height: 2;
		}

		.right {
			float: none;
		}
	}

	.vertical-center {
		margin-bottom: 20vh;
	}
}

